Work with context

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Home
+    {{ title }}
 {% endblock %}
 
 {% block link %}
@@ -11,4 +11,5 @@
 
 {% block content %}
     <h1>Home</h1>
+    <p> Ім'я користувача: {{ user_name }}</p>
 {% endblock %}
