--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -11,4 +11,9 @@
 
 {% block content %}
     <h1>Post</h1>
+    {% for post in posts %}
+        <p>{{ post.title }}</p>
+        <p>{{ post.content }}</p>
+        <p>Posted by: {{ post.author }}</p>
+    {% endfor %}
 {% endblock %}
