--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -16,4 +16,21 @@
         <p>{{ post.content }}</p>
         <p>Posted by: {{ post.author }}</p>
     {% endfor %}
+
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+
+        <input required type="text" name="title" placeholder="Title" maxlength="50">
+        <textarea required name="content" placeholder="Content" maxlength="2000"></textarea>
+        <input required type="file" name="image">
+
+        <label for="tags">Tags:</label>
+        <select name="tags" id="tags" multiple>
+            {% for tag in tags %}
+                <option value="{{ tag.id }}">{{ tag.name }}</option>
+            {% endfor %}
+        </select>
+        
+        <button type="submit">Create post</button>
+    </form>
 {% endblock %}
