--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -9,21 +9,14 @@
     <link rel="stylesheet" href="{% static 'post/css/post.css' %}">
 {% endblock %}
 
-{% block content %}
-    <h1>Post</h1>
-    {% for post in posts %}
-        <p>{{ post.title }}</p>
-        <p>{{ post.content }}</p>
-        <p>Posted by: {{ post.author }}</p>
-    {% endfor %}
-
-    <form action="" method="post" enctype="multipart/form-data">
+<!-- <form action="{% url 'create_post' %}" method="post" enctype="multipart/form-data"> -->
+    <!-- <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-
+    
         <input required type="text" name="title" placeholder="Title" maxlength="50">
         <textarea required name="content" placeholder="Content" maxlength="2000"></textarea>
         <input required type="file" name="image">
-
+    
         <label for="tags">Tags:</label>
         <select name="tags" id="tags" multiple>
             {% for tag in tags %}
@@ -31,6 +24,18 @@
             {% endfor %}
         </select>
         
+        <button type="submit">Create post</button>
+    </form> -->
+{% block content %}
+    <h1>Post</h1>
+    {% for post in posts %}
+        <p>{{ post.title }}</p>
+        <p>{{ post.content }}</p>
+        <p>Posted by: {{ post.author }}</p>
+    {% endfor %}
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
         <button type="submit">Create post</button>
     </form>
 {% endblock %}
