--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -9,23 +9,6 @@
     <link rel="stylesheet" href="{% static 'post/css/post.css' %}">
 {% endblock %}
 
-<!-- <form action="{% url 'create_post' %}" method="post" enctype="multipart/form-data"> -->
-    <!-- <form action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-    
-        <input required type="text" name="title" placeholder="Title" maxlength="50">
-        <textarea required name="content" placeholder="Content" maxlength="2000"></textarea>
-        <input required type="file" name="image">
-    
-        <label for="tags">Tags:</label>
-        <select name="tags" id="tags" multiple>
-            {% for tag in tags %}
-                <option value="{{ tag.id }}">{{ tag.name }}</option>
-            {% endfor %}
-        </select>
-        
-        <button type="submit">Create post</button>
-    </form> -->
 {% block content %}
     <h1>Post</h1>
     {% for post in posts %}
@@ -33,9 +16,17 @@
         <p>{{ post.content }}</p>
         <p>Posted by: {{ post.author }}</p>
     {% endfor %}
+
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create post</button>
+        {% for field in form %}
+            <div>
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {{ field }}
+            </div>
+        {% endfor %}
+        <button type="submit">Create</button>
     </form>
+
+    
 {% endblock %}
